--- a/style.css
+++ b/style.css
@@ -11,12 +11,14 @@ body {
     flex-direction: column;
     height: 100vh;
     width: 100%;
-    background-color: black;
+    background-image: url("https://source.unsplash.com/1600x900/?landscape");
+    background-size: cover;
     color: white;
 }
 
 section {
-    background-color: #262626;
+    background-color: rgba(26, 26, 26, 0.8);
+
     padding: 2rem;
     border-radius: 8px;
 }
